last update before upload

--- a/index.html
+++ b/index.html
@@ -25,15 +25,11 @@
   </head>
   <body>
     <div class="container clearfix">
-      <input
-        type="text"
-        id="myInput"
-        onkeyup="myFunction()"
-        placeholder="Search"
-      />
+      <input type="text" id="myInput" placeholder="Search" />
 
       <div class="gallery">
         <a
+          class = "TheseImages"
           href="photos/1.jpg"
           data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields."
         >
@@ -41,6 +37,7 @@
         </a>
 
         <a
+          class = "TheseImages"
           href="photos/2.jpg"
           data-caption="The lake was so calm today. We had a great view of the snow on the mountains from here."
         >
@@ -48,12 +45,14 @@
         </a>
 
         <a
+          class = "TheseImages"
           href="photos/3.jpg"
           data-caption="I hiked to the top of the mountain and got this picture of the canyon and trees below."
         >
           <img src="photos/thumbnails/3.jpg" class="image-3" alt="Canyon" />
         </a>
         <a
+          class = "TheseImages"
           href="photos/4.jpg"
           data-caption="It was amazing to see an iceberg up close, it was so cold but didn’t snow today"
         >
@@ -61,6 +60,7 @@
         </a>
 
         <a
+          class = "TheseImages"
           href="photos/5.jpg"
           data-caption="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."
         >
@@ -68,12 +68,14 @@
         </a>
 
         <a
+          class = "TheseImages"
           href="photos/6.jpg"
           data-caption="Fall is coming, I love when the leaves on the trees start to change color."
         >
           <img src="photos/thumbnails/6.jpg" class="image-6" alt="Fall" />
         </a>
         <a
+          class = "TheseImages"
           href="photos/7.jpg"
           data-caption="I drove past this plantation yesterday, everything is so green!"
         >
@@ -81,6 +83,7 @@
         </a>
 
         <a
+          class = "TheseImages"
           href="photos/8.jpg"
           data-caption="My summer vacation to the Oregon Coast. I love the sandy dunes!"
         >
@@ -88,6 +91,7 @@
         </a>
 
         <a
+          class = "TheseImages"
           href="photos/9.jpg"
           data-caption="We enjoyed a quiet stroll down this countryside lane."
         >
@@ -98,6 +102,7 @@
           />
         </a>
         <a
+          class = "TheseImages"
           href="photos/10.jpg"
           data-caption="Sunset at the coast! The sky turned a lovely shade of orange."
         >
@@ -105,6 +110,7 @@
         </a>
 
         <a
+          class = "TheseImages"
           href="photos/11.jpg"
           data-caption="I did a tour of a cave today and the view of the landscape below was breathtaking."
         >
@@ -112,6 +118,7 @@
         </a>
 
         <a
+          class = "TheseImages"
           href="photos/12.jpg"
           data-caption="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."
         >
@@ -121,9 +128,20 @@
             alt="Bluebells"
           />
         </a>
+        <!--  <p>
+          <a href="http://jigsaw.w3.org/css-validator/check/referer">
+            <img
+              style="border: 0; width: 88px; height: 31px"
+              src="http://jigsaw.w3.org/css-validator/images/vcss"
+              alt="Valid CSS!"
+            />
+          </a>
+        </p> -->
       </div>
     </div>
-    <script type="text/javascript" src="js/script.js"></script>
+
+    <script src="js/script.js"></script>
     <script src="js/baguetteBox.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
